# lcls-user-motor-gui

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  README.md  README.rst  data_test.py  discover_pv.py  discover_pvs.py  main.py  make_venv.sh  mapping-window.ui  parse_pvs.py  pvlist_test.txt  pyproject.toml  requirements.txt  stage-config.ui  superscore.cfg  test_output.txt  testoutput  ui_setup.py  unit_test_data.json  user-motor-gui.py  user-motor-gui.ui  user-motor-gui_list_view.ui
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
configs/: filestore.json  root.json
docs/source/: conf.py  index.rst
lcls_user_motor_gui/: _version.py  qt_helpers.py  user_motor_gui.py
lcls_user_motor_gui/processing/: discover_pvs.py  parse_pvs.py  test_discovery_pvs.py
lcls_user_motor_gui/tests/: conftest.py  expert_unit_test.json  test_main_window.py  test_populate_axis_di_list.py  unit_test_config.json
lcls_user_motor_gui/ui/: diagnostic_tab.ui  diagnostics.ui  expert_tab.ui  linker_tab.ui  main_window.ui  main_window_new.ui  main_window_old.ui  mapping-window.ui  mapping_window.ui  old_main.ui  old_user-motor-gui.ui  param.ui  settings_tab.ui  stage-config.ui  user_input_tab.ui
lcls_user_motor_gui/utils/: dict_tools.py
lcls_user_motor_gui/widgets/: diagnostics.py  expert.py  filtered_list.py  linker.py  user_input.py
test_epics_many/: pyvenv.cfg
