[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "User motor gui for PLCs"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "lcls_user_motor_gui"
requires-python = ">=3.12"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "lcls_user_motor_gui*",]
namespaces = false

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE"

[project.scripts]
"lcls-user-motor-gui" = "lcls_user_motor_gui.bin.main:main"
"lcls_user_motor_gui" = "lcls_user_motor_gui.bin.main:main"

[tool.setuptools_scm]
write_to = "lcls_user_motor_gui/_version.py"

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.pytest.ini_options]
addopts = "--cov=."

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "lcls_user_motor_gui/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
exclude-newer = "7 days"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lcls_user_motor_gui = { path = ".", editable = true }

[tool.pixi.tasks]
install-superscore = "python -m pip install \"superscore @ git+ssh://git@github.com/pcdshub/superscore.git@v0.0.1\""

[tool.pixi.dependencies]
ipython = "==8.4.0"
pcdsutils = ">=0.14.2,<0.15"
pydm = ">=1.28.3,<2"
qtpy = ">=2.4.3,<3"
pyqt = ">=5.15.11,<6"
pyepics = ">=3.5.10,<4"
ophyd = ">=1.11.1,<2"
pip = ">=26.1.1,<27"
